feat(database): Adiciona migrations e configurações do sistema
MIGRATIONS (Flyway):
================

V02__create_tables.sql - Tabelas de Autenticação e RBAC:
- auth_usuarios: Usuários do sistema (id, uuid, nome, email, senha_hash, cpf,
  telefone, tipo, ativo, tentativas_falhas, locked_until, email_verificado,
  ultima_alteracao_senha_em, timestamps, soft delete)
- perfis: Roles do sistema (id, nome, descricao, timestamps, soft delete)
- permissoes: Permissions (id, nome, descricao, timestamps, soft delete)
- perfis_permissoes: Relação N:N entre perfis e permissões
- auth_usuarios_perfis: Relação N:N entre usuários e perfis
- areas_sistema: Áreas do sistema (id, nome, codigo, descricao)
- perfis_areas: Relação N:N com níveis de acesso (LEITURA, ESCRITA, ADMIN)
- tentativas_login: Auditoria de logins (id, usuario_id, cpf, ip_origem,
  user_agent, data_tentativa, sucesso, motivo_falha, bloqueado)
- tokens_recuperacao: Tokens de recuperação/verificação (id, usuario_id,
  token_hash, tipo, expiracao, usado, usado_em, ip_geracao, user_agent)
- sessoes_usuario: Sessões JWT (id, usuario_id, token_jwt, ip_origem,
  user_agent, criado_em, expira_em, ativo)
- historico_senhas: Histórico de senhas (id, usuario_id, senha_hash, criado_em)
- logs_auditoria: Logs gerais (id, timestamp, usuario_id, acao, objeto_tipo,
  objeto_id, detalhes JSON, ip_origem, user_agent)

V03__create_autenticacao_2fa.sql - Autenticação Dois Fatores:
- autenticacao_2fa: Configuração 2FA (id, usuario_id, habilitado,
  data_habilitacao, data_desabilitacao, codigo_atual, expiracao_codigo,
  tentativas_falhas, bloqueado_ate, timestamps)
- FK para auth_usuarios com CASCADE
- Índices: usuario_habilitado, codigo_expiracao
- Código: 6 dígitos, expira em 5 minutos
- Bloqueio: 15 minutos após 5 tentativas falhas

V04__add_senha_temporaria.sql - Senha Temporária:
- Adiciona coluna senha_temporaria (BOOLEAN) em auth_usuarios
- Usado para forçar troca de senha no primeiro acesso
- Default: FALSE

V05__add_foto_colu